--- a/style.css
+++ b/style.css
@@ -86,26 +86,18 @@ li {
 #author {
   font-size: 18px;
   font-style: italic;
-  float: left;
-  margin-top: 10px;
-  margin-left: 20px;
-}
-.author-img {
-  height: 50px;
-  width: 50px;
-  float: left;
 }
 
 #copyright {
   font-size: 16px;
 }
 
-#related-author {
+.related-posts {
   font-size: 18px;
   font-weight: bold;
 }
 
-.related-posts {
+.related {
   list-style: none;
   margin-left: 0px;
 }
@@ -119,12 +111,13 @@ li {
   background-color: #f7f7f7;
   padding: 20px 40px;
   margin-bottom: 60px;
-  height: 60px;
+  height: 80px;
 }
 
 nav {
-  font-size: 18px;
+  font-size: 22px;
   padding-top: 10px;
+  padding-left: 150px;
 }
 
 article {
@@ -147,7 +140,7 @@ aside {
   /* padding-top: 50px;
   padding-bottom: 50px; */
   padding: 10px 40px;
-  width: 300px;
+  width: 500px;
 }
 
 /* .first-li {
@@ -162,8 +155,7 @@ li:first-child {
 a:link {
   color: #1098ad;
   text-decoration: none;
-  margin-top: 10px;
-  margin-right: 10px;
+  margin-right: 30px;
   display: inline-block;
 }
 
@@ -195,6 +187,18 @@ a:active {
   right: 50px;
 }
 
+/* FLOATS */
+/* #author {
+  float: left;
+  margin-top: 10px;
+  margin-left: 20px;
+}
+.author-img {
+  height: 50px;
+  width: 50px;
+  float: left;
+}
+
 h1 {
   float: left;
 }
@@ -212,4 +216,53 @@ aside {
 }
 footer {
   clear: both;
+} */
+
+/* FLEX-BOX */
+
+.main-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.author-box {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+#author {
+  margin-bottom: 0px;
+  margin-left: 15px;
+}
+.related-posts {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+.related-link:link {
+  font-size: 17px;
+  font-weight: bold;
+  font-style: normal;
+  margin-bottom: 5px;
+  display: block;
+}
+.related-author {
+  margin-bottom: 0px;
+  font-size: 14px;
+  font-style: italic;
+}
+.flex-row {
+  display: flex;
+  align-items: start;
+  gap: 75px;
+  margin-bottom: 15px;
+}
+article {
+  flex: 0 0 825px;
+  margin-bottom: 0px;
+}
+aside {
+  flex: 0 0 300px;
 }
