--- a/flexbox-challange.css
+++ b/flexbox-challange.css
@@ -1,16 +1,113 @@
 * {
+  margin: 0;
+  padding: 0;
+}
+body {
+  line-height: 1.6;
   font-family: sans-serif;
 }
 .container {
-  width: 800px;
+  width: 825px;
   border: 6px solid #000;
+  margin: 50px auto;
+  position: relative;
 }
 .page-title {
-  font-size: 32px;
+  font-size: 30px;
   text-transform: uppercase;
   text-align: center;
   background-color: #f7f7f7;
   padding: 20px 0px;
 }
+.page-title::before {
+  content: "sale";
+  text-transform: uppercase;
+  color: #fff;
+  background-color: #c70707;
+  font-size: 14px;
+  padding: 5px 15px;
+  font-weight: bold;
+  position: absolute;
+  top: -20px;
+  left: -40px;
+}
+.flex-box {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+  gap: 30px;
+}
+.details {
+  width: 280px;
+}
+.price-shipping-flex {
+  width: 240px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 .price {
+  font-size: 24px;
+}
+#shipping {
+  text-transform: uppercase;
+  color: #817e7e;
+  font-weight: bold;
+  font-size: 14px;
+}
+a:link {
+  color: #000;
+  font-weight: bold;
+}
+.color-container {
+  height: 50px;
+}
+.color-box {
+  width: 30px;
+  height: 30px;
+  display: inline-block;
+  margin-right: 10px;
+  border: 1px solid #000;
+}
+.color-box.black {
+  background-color: #000;
+}
+.color-box.blue {
+  background-color: #0000ff;
+}
+.color-box.red {
+  background-color: #ff0000;
+}
+.color-box.orange {
+  background-color: #ffa500;
+}
+.color-box.green {
+  background-color: #008000;
+}
+.color-box.brown {
+  background-color: #a52a2a;
+}
+.product-info {
+  width: 240px;
+}
+.product-detail {
+  text-transform: uppercase;
+}
+li {
+  list-style: square;
+}
+.add-to-cart {
+  background-color: #000;
+  color: #fff;
+  font-size: 18px;
+  text-transform: uppercase;
+  padding: 10px 20px;
+  border: none;
+  width: 100%;
+}
+.add-to-cart:hover {
+  background-color: #fff;
+  color: #000;
+  border-top: 6px solid #000;
+  cursor: pointer;
 }
