--- a/style.css
+++ b/style.css
@@ -110,7 +110,6 @@ li {
 .main-header {
   background-color: #f7f7f7;
   padding: 20px 40px;
-  margin-bottom: 60px;
   height: 80px;
 }
 
@@ -121,7 +120,6 @@ nav {
 }
 
 article {
-  margin-bottom: 60px;
   width: 825px;
 }
 
@@ -140,7 +138,7 @@ aside {
   /* padding-top: 50px;
   padding-bottom: 50px; */
   padding: 10px 40px;
-  width: 500px;
+  width: 300px;
 }
 
 /* .first-li {
@@ -253,7 +251,8 @@ footer {
   font-size: 14px;
   font-style: italic;
 }
-.flex-row {
+/* Flex-Box Layout */
+/* .flex-row {
   display: flex;
   align-items: start;
   gap: 75px;
@@ -265,4 +264,20 @@ article {
 }
 aside {
   flex: 0 0 300px;
+} */
+/* Css grid layout */
+.container {
+  display: grid;
+  grid-template-columns: 1fr 300px;
+  column-gap: 75px;
+  row-gap: 60px;
+  align-items: start;
+}
+.main-header {
+  grid-column: 1 / -1;
+}
+
+footer {
+  background-color: #1098ad;
+  grid-column: 1 / -1;
 }
